--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -385,3 +385,71 @@
     }
   }
 }
+
+.s-promo {
+  padding: 50px 0;
+  background-color: vars.$color-blue-dark-100;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__info {
+    max-width: 658px;
+  }
+  &__title {
+    margin-bottom: 4px;
+    font-family: "Poppins", serif;
+    color: vars.$color-white;
+    font-size: 42px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+  &__text {
+    max-width: 520px;
+    color: vars.$color-white;
+    line-height: 1.5;
+  }
+  &__form {
+    max-width: 658px;
+  }
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px 0;
+  &__input {
+    padding: 19px 14px;
+    border-radius: 4px;
+    border: 1px solid #ececec;
+    background-color: vars.$color-white;
+    font-family: "Roboto", serif;
+    color: vars.$color-blue-dark-100;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    &::placeholder {
+      font-family: "Roboto", serif;
+      color: #343434;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 1.5;
+    }
+  }
+  &__btn {
+    width: max-content;
+    margin-top: 16px;
+    padding: 14px 30px;
+    border-radius: 14px;
+    background-color: vars.$color-white;
+    color: vars.$color-blue-dark-100;
+    font-size: 20px;
+    line-height: 1.5;
+    transition: filter 0.3s ease;
+    &:hover {
+      filter: brightness(1.2);
+    }
+  }
+}
