--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -14,6 +14,27 @@ body {
   padding: 0 10px;
 }
 
+.s-title {
+  font-family: "Poppins", serif;
+  color: vars.$color-blue-dark-100;
+  font-size: 42px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.btn {
+  padding: 14px 30px;
+  border-radius: 14px;
+  background-color: vars.$color-blue-dark-100;
+  color: vars.$color-white;
+  font-size: 20px;
+  line-height: 1.5;
+  transition: filter 0.3s ease;
+  &:hover {
+    filter: brightness(1.2);
+  }
+}
+
 .details-link {
   position: relative;
   padding-left: 50px;
@@ -38,5 +59,36 @@ body {
   }
   &:hover {
     filter: brightness(1.2);
+  }
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px 0;
+  &__input {
+    padding: 19px 14px;
+    border-radius: 4px;
+    border: 1px solid #ececec;
+    background-color: vars.$color-white;
+    font-family: "Roboto", serif;
+    color: vars.$color-blue-dark-100;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    &::placeholder {
+      font-family: "Roboto", serif;
+      color: #343434;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 1.5;
+    }
+  }
+  &__btn {
+    width: max-content;
+    margin-top: 16px;
+    background-color: vars.$color-white;
+    color: vars.$color-blue-dark-100;
   }
 }
