--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -466,3 +466,86 @@
     background-image: url("../images/arrow-right.svg");
   }
 }
+
+.s-faq {
+  padding: 50px 0 40px;
+  &__title {
+    margin-bottom: 20px;
+  }
+  &__inner {
+    display: flex;
+    gap: 0 24px;
+  }
+  &__accordion {
+    width: 772px;
+  }
+  &__ask-question-box {
+    width: 544px;
+    height: max-content;
+    padding: 57px 60px;
+    border-radius: 14px;
+    background-color: vars.$color-blue-dark-100;
+  }
+  &__ask-question-title {
+    position: relative;
+    padding-bottom: 80px;
+    font-family: "Poppins", serif;
+    color: vars.$color-white;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-align: center;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 40px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: vars.$color-white;
+    }
+  }
+  &__form {
+    gap: 20px 0;
+  }
+  &__form-btn {
+    margin: 9px auto 0;
+  }
+}
+
+.footer {
+  padding: 32px 0;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__logo-wrapper {
+    flex-grow: 1;
+    flex-basis: 0;
+  }
+  &__copyright {
+    color: vars.$color-blue-dark-100;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  &__menu {
+    flex-grow: 1;
+    flex-basis: 0;
+    text-align: right;
+  }
+  &__menu-list {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0 16px;
+  }
+  &__menu-item {
+    padding: 12px 8px;
+  }
+  &__menu-link {
+    color: #343434;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
