--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,9 +9,9 @@ body {
 }
 
 .container {
-  max-width: 1360px;
+  max-width: 1380px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 20px;
 }
 
 .s-title {
@@ -130,6 +130,7 @@ body {
     font-size: 20px;
     font-weight: 500;
     line-height: 1.5;
+    @include vars.line-clamp(1);
   }
   &__answer {
     display: none;
