--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,10 +4,14 @@
 @use "global";
 
 .header {
+  position: relative;
   padding: 11px 0;
   &__inner {
     display: flex;
     align-items: center;
+  }
+  &__img {
+    z-index: 10;
   }
 }
 
@@ -71,11 +75,7 @@
     }
   }
   &__link {
-    display: -webkit-box;
-    overflow: hidden;
-    -webkit-box-orient: vertical;
-    line-clamp: 1;
-    -webkit-line-clamp: 1;
+    @include vars.line-clamp(1);
     color: inherit;
     font-size: 16px;
     font-weight: 400;
@@ -89,6 +89,27 @@
     }
     &::after {
       transform: rotate(-180deg) translateY(9px);
+    }
+  }
+}
+
+.burger {
+  display: none;
+  width: 40px;
+  height: 40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  &__line {
+    width: 30px;
+    height: 3px;
+    background-color: vars.$color-blue-dark-100;
+    &:nth-child(1) {
+      transform: translateY(-7px);
+    }
+    &:nth-child(3) {
+      transform: translateY(7px);
     }
   }
 }
@@ -134,7 +155,7 @@
 
 .s-advantages {
   padding: 70px 0;
-  background-color: vars.$color-blue-50;
+  background-color: #e0e7ef;
   &__box-title {
     margin-bottom: 20px;
     padding: 30px 50px;
@@ -183,6 +204,11 @@
     align-items: stretch;
     gap: 0 27px;
   }
+  &__img {
+    width: 100%;
+    border-radius: 14px;
+    object-fit: cover;
+  }
   &__info {
     display: flex;
     flex-wrap: wrap;
@@ -206,6 +232,7 @@
     line-height: 1.5;
   }
   &__box--stats {
+    width: calc(100% / 2 - 12px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -216,7 +243,7 @@
       font-size: 42px;
     }
     .s-about__box-text {
-      max-width: 166px;
+      width: 165px;
     }
   }
 }
@@ -246,6 +273,7 @@
   }
   &__title {
     margin: 0 auto 0 14px;
+    padding-right: 10px;
     font-family: "Poppins", serif;
     color: vars.$color-blue-dark-100;
     font-size: 24px;
@@ -343,8 +371,8 @@
   background-color: vars.$color-blue-dark-100;
   &__inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 0 24px;
   }
   &__info {
     max-width: 658px;
@@ -359,7 +387,7 @@
     line-height: 1.5;
   }
   &__form {
-    max-width: 658px;
+    max-width: calc(100% / 2 - 12px);
   }
 }
 
@@ -371,10 +399,13 @@
   &__slide {
     box-sizing: border-box;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 0 20px;
     padding: 20px;
     border: 1px solid vars.$color-blue-dark-100;
+    border-radius: 12px;
+  }
+  &__slide-img {
     border-radius: 12px;
   }
   &__slide-info {
@@ -533,7 +564,6 @@
   &__menu {
     flex-grow: 1;
     flex-basis: 0;
-    text-align: right;
   }
   &__menu-list {
     display: flex;
@@ -547,5 +577,331 @@
     color: #343434;
     font-size: 16px;
     font-weight: 500;
+  }
+}
+
+@media (max-width: 1200px) {
+  .s-title {
+    font-size: 36px;
+  }
+
+  .s-hero {
+    &__info {
+      padding: 100px 60px;
+    }
+    &__title {
+      font-size: 36px;
+    }
+    &__img {
+      width: 300px;
+      object-fit: cover;
+    }
+  }
+
+  .s-advantages {
+    &__item {
+      padding: 30px 20px;
+    }
+    &__item-title {
+      font-size: 20px;
+    }
+  }
+
+  .s-about__img {
+    width: 35vw;
+  }
+
+  .s-promo__title {
+    font-size: 32px;
+  }
+
+  .s-testimonials {
+    &__slide {
+      align-items: flex-start;
+    }
+    &__slide-img {
+      width: 90px;
+      height: 90px;
+    }
+    &__slide-text {
+      margin-left: -110px;
+    }
+  }
+
+  .s-faq__ask-question-box {
+    padding: 57px 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  .s-faq {
+    &__inner {
+      flex-wrap: wrap;
+      gap: 30px 0;
+    }
+    &__ask-question-box {
+      width: 100%;
+    }
+  }
+
+  .accordion__question {
+    @include vars.line-clamp(2);
+  }
+}
+
+@media (max-width: 900px) {
+  .s-hero {
+    &__info {
+      padding: 100px 30px;
+    }
+    &__title {
+      font-size: 24px;
+    }
+  }
+
+  .s-advantages {
+    &__box-title {
+      margin-bottom: 10px;
+    }
+    &__list {
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    &__item {
+      max-width: calc(100vw / 2 - 25px);
+    }
+  }
+
+  .s-about {
+    &__img {
+      width: 40vw;
+    }
+    &__box-title {
+      font-size: 28px;
+    }
+  }
+
+  .s-promo__title {
+    width: 300px;
+    font-size: 24px;
+  }
+
+  .footer {
+    &__inner {
+      flex-wrap: wrap;
+      gap: 20px 0;
+    }
+    &__logo-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+    &__menu,
+    &__logo-wrapper {
+      flex-grow: 0;
+      flex-basis: auto;
+      width: 100%;
+    }
+    &__menu-list {
+      justify-content: center;
+    }
+    &__copyright {
+      order: 1;
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .header__btn {
+    display: none;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  .menu--active .menu__list {
+    top: 0;
+  }
+
+  .menu {
+    &__list {
+      position: absolute;
+      top: -1000%;
+      right: 0;
+      left: 0;
+      height: 400px;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-top: 80px;
+      background-color: vars.$color-white;
+      transition: all 0.3s ease;
+    }
+    &-select__list {
+      left: -25px;
+    }
+    &__item {
+      width: 150px;
+      text-align: center;
+    }
+    &__link {
+      font-size: 24px;
+    }
+  }
+
+  .s-hero__img {
+    width: 200px;
+  }
+
+  .s-about__img {
+    display: none;
+  }
+
+  .course {
+    &__title {
+      font-size: 20px;
+      @include vars.line-clamp(2);
+    }
+    &__short-info {
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+  }
+}
+
+@media (max-width: 590px) {
+  .container {
+    padding: 0 10px;
+  }
+  .s-title {
+    font-size: 32px;
+  }
+  .details-link {
+    font-size: 0;
+    &::before {
+      left: 9px;
+    }
+  }
+
+  .s-hero {
+    &__info {
+      width: 100vw;
+      padding: 50px 30px;
+    }
+    &__title {
+      max-width: 320px;
+    }
+    &__img {
+      display: none;
+    }
+  }
+
+  .s-advantages {
+    &__box-title {
+      padding: 30px 0;
+    }
+    &__title {
+      text-align: center;
+    }
+    &__item {
+      width: 100%;
+      max-width: 100vw;
+    }
+    &__item-title {
+      width: 250px;
+    }
+    &__item-text {
+      width: 250px;
+    }
+  }
+
+  .s-about {
+    &__info {
+      gap: 10px;
+    }
+    &__box {
+      padding: 30px 20px;
+    }
+    &__box-title {
+      font-size: 24px;
+    }
+    &__box-text {
+      font-size: 16px;
+    }
+    &__box--stats {
+      width: calc(100% / 2 - 5px);
+      padding: 20px 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .s-about__box-title {
+        font-size: 28px;
+      }
+      .s-about__box-text {
+        width: 135px;
+        font-size: 16px;
+      }
+    }
+  }
+
+  .course {
+    padding: 20px;
+    &__img {
+      display: none;
+    }
+    &__title {
+      margin: 0;
+    }
+    &__main-info-price {
+      justify-content: center;
+    }
+    &__btn {
+      width: 216px;
+      margin: 0 auto;
+    }
+  }
+
+  .s-promo {
+    &__inner {
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+    &__info {
+      margin: 0 auto;
+    }
+    &__title {
+      width: 100%;
+      max-width: 400px;
+      margin: 0 auto 10px;
+      font-size: 24px;
+      text-align: center;
+    }
+    &__text {
+      max-width: 500px;
+      text-align: center;
+    }
+    &__form {
+      max-width: 100%;
+    }
+    .form__btn {
+      margin: 0 auto;
+    }
+  }
+
+  .accordion {
+    &__item {
+      padding: 30px 70px 30px 10px;
+    }
+    &__decor {
+      top: 30px;
+      right: 15px;
+    }
+  }
+}
+
+@media (max-width: 470px) {
+  .accordion__decor {
+    top: 42px;
   }
 }
